--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "axios": "^0.16.2",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.6.0",
     "react": "^15.6.1",
+    "react-chartjs-2": "^2.5.6",
     "react-dom": "^15.6.1",
     "react-router": "^3.0.2",
     "react-scripts": "1.0.10"
