--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.16.2",
     "bootstrap": "^3.3.7",
     "chart.js": "^2.6.0",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-chartjs-2": "^2.5.6",
     "react-dom": "^15.6.1",
