--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^15.6.1",
     "react-chartjs-2": "^2.5.6",
     "react-dom": "^15.6.1",
+    "react-moment": "^0.6.1",
     "react-router": "^3.0.2",
     "react-scripts": "1.0.10"
   },
